--- a/netlify.toml
+++ b/netlify.toml
@@ -1,2 +1,3 @@
 [build]
-command = "npm run dev"
+command = "npm run build"
+publish = "/opt/build/repo/opt/build/repo/Vue/dist"  # Update this path accordingly
